[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saboteur"
version = "0.1.0"
description = "Chaos engineering test harness for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "click",
    "smolagents",
    "openai",
    "pyyaml",
    "pydantic>=2",
    "pydantic-settings",
]

[project.scripts]
saboteur = "saboteur.cli:main"
saboteur-mcp = "saboteur.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
include = ["saboteur*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false

# smolagents ships no type stubs / py.typed marker; treat it as untyped rather
# than letting its missing stubs mask real errors in our own code.
[[tool.mypy.overrides]]
module = ["smolagents.*"]
ignore_missing_imports = true
